fix(Group): use better paddings and margins

--- a/packages/vkui/src/components/Panel/Panel.module.css
+++ b/packages/vkui/src/components/Panel/Panel.module.css
@@ -143,3 +143,11 @@
 .Panel__fade {
   /* Пустой класс для CSS Modules (см. CONTRIBUTING.md)  */
 }
+
+/*
+ * CMP:
+ * Group
+ */
+.Group + .Panel__in-after {
+  padding-bottom: 8px;
+}
