--- a/packages/vkui/src/components/Group/Group.module.css
+++ b/packages/vkui/src/components/Group/Group.module.css
@@ -1,33 +1,5 @@
 .Group {
   color: var(--vkui--color_text_primary);
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-.Group__separator--spacing,
-.Group__separator--separator {
-  display: none;
-}
-
-.Group--sizeX-compact + .Group__separator--spacing + .Group__separator--separator,
-.Group--mode-plain + .Group__separator--spacing + .Group__separator--separator {
-  display: block;
-}
-
-@media (--sizeX-compact) {
-  .Group--sizeX-none + .Group__separator--spacing + .Group__separator--separator {
-    display: block;
-  }
-}
-
-.Group--sizeX-regular.Group--mode-none + .Group__separator--spacing {
-  display: block;
-}
-
-@media (--sizeX-regular) {
-  .Group--sizeX-none.Group--mode-none + .Group__separator--spacing {
-    display: block;
-  }
 }
 
 .Group--mode-card.Group--padding-s {
@@ -93,45 +65,13 @@
   }
 }
 
-.Group--mode-plain + .Group__separator,
-.Group--mode-plain + .Group__separator + .Group__separator {
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-@media (--sizeX-compact) {
-  .Group--sizeX-none.Group--mode-none + .Group__separator,
-  .Group--sizeX-none.Group--mode-none + .Group__separator + .Group__separator {
-    padding-top: 8px;
-    padding-bottom: 8px;
-  }
-}
-
-.Group:last-of-type ~ .Group__separator {
-  display: none;
-}
-
-.Group:last-of-type ~ .Group__separator--force,
-.Group--sizeX-regular.Group--mode-none:last-of-type + .Group__separator--spacing,
-.Group--sizeX-regular.Group--mode-card:last-of-type + .Group__separator--spacing {
-  display: block;
-}
-
-@media (--sizeX-regular) {
-  .Group--sizeX-none.Group--mode-card:last-of-type + .Group__separator--spacing,
-  .Group--sizeX-none.Group--mode-none:last-of-type + .Group__separator--spacing {
-    display: block;
-  }
-}
-
 .Group__description {
   display: block;
   padding: 4px 16px 16px;
   color: var(--vkui--color_text_secondary);
 }
 
-.Group .Group,
-.Group .Group + .Group__separator {
+.Group .Group {
   padding-left: 0;
   padding-right: 0;
 }
@@ -142,6 +82,10 @@
 
 .Group .Group:last-of-type {
   padding-bottom: 0;
+}
+
+.Group:last-of-type .Group__separator:not(.Group__separator--force) {
+  display: none;
 }
 
 /**
@@ -161,4 +105,8 @@
   top: -1px;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
+}
+
+.PanelHeader + .Group:not(.Group--mode-card) {
+  padding-top: 8px;
 }
