--- a/packages/vkui/src/components/PanelHeaderButton/PanelHeaderButton.module.css
+++ b/packages/vkui/src/components/PanelHeaderButton/PanelHeaderButton.module.css
@@ -103,3 +103,12 @@
     display: none;
   }
 }
+
+/**
+ * CMP:
+ * PanelHeader
+ */
+.PanelHeader--ios .PanelHeader__before .PanelHeaderButton + .PanelHeaderButton--primitive {
+  margin-left: -6px;
+  padding-left: 0;
+}
