fix(Panel): move styles to PanelHeader

--- a/packages/vkui/src/components/PanelHeader/PanelHeader.module.css
+++ b/packages/vkui/src/components/PanelHeader/PanelHeader.module.css
@@ -289,3 +289,14 @@
 .PanelHeader--sep {
   /* Пустой класс для CSS Modules (см. CONTRIBUTING.md)  */
 }
+
+/*
+ * CMP:
+ * Panel
+ */
+.Panel--centered .PanelHeader {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
